[gd_scene load_steps=17 format=2]

[ext_resource path="res://Hitbox and Hurtbox/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitbox and Hurtbox/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox and Hurtbox/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Basebat.gd" type="Script" id=7]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.50331
height = 1.87677

[sub_resource type="CircleShape2D" id=2]
radius = 101.463

[sub_resource type="CircleShape2D" id=3]
radius = 3.50218

[sub_resource type="CircleShape2D" id=4]
radius = 5.92914

[sub_resource type="CircleShape2D" id=5]
radius = 2.07933

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Stop"

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/active = false

[node name="BaseBat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]
wander_range = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 6 )
anims/Stop = SubResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 8 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="HitBox"]

[editable path="SoftCollision"]
